force-app/main/default/objects/Sync_Failure__c/Sync_Failure__c.object-meta.xml
<CustomObject>
    <label>Sync Failure</label>
    <pluralLabel>Sync Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Sync Failure Name</label>
        <type>AutoNumber</type>
        <displayFormat>SF-{0000}</displayFormat>
    </nameField>
</CustomObject>