force-app/main/default/objects/Sync_Failure__c/fields/Failed_At__c.field-meta.xml
<CustomField>
    <fullName>Failed_At__c</fullName>
    <label>Failed At</label>
    <type>DateTime</type>
</CustomField>