force-app/main/default/objects/Sync_Failure__c/fields/Last_Retry_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_At__c</fullName>
    <label>Last Retry At</label>
    <type>DateTime</type>
</CustomField>